Created sub pages template and added content

--- a/about.html
+++ b/about.html
@@ -105,6 +105,57 @@
 
   </ul>
 </nav>
+<div class="top-line-title" id="about"></div>
+<div class="title">
+  <h1 class="title">About me</h1>
+</div>
+<div class="bottom-line-title"></div>
+<div class="container-fluid ">
+  <div class="about-box">
+    <h2 class="bio-title">Who am I?</h2>
+    <div class="row mt-2 mb-1 h-100">
+      <div class="col-md-5  ">
+        <div class="bio-container">
+          <img src="images/Photo Profile.jpg" alt="profile picture" class="img-fluid rounded profile" />
+        </div>
+      </div>
+      <div class="col-md-7">
+        <p class="bio-highlight mb-1">
+          French born engineer turned visual designer and front end developer who's happy to call New Zealand home.</p>
+        <p class="bio mb-1">
+          I am passionate about design and digital technologies; I love to know how things work (hello engineering
+          brain!) but
+          also make things functional for users and pleasing to the eye (hello creative brain!). Being able to combine
+          these two
+          sides of my brain has been a revelation and encouraged me to start Creafix Design.
+          The desire to help businesses create media that helps promote brands, products and information to their
+          customers is the
+          foundation or "raison de vivre" of Creafix Design.😃</p><br />
+        <p class="bio mb-1">
+          I have been working as a product designer for a number of years, focusing heavily on analysing problems and
+          identifying
+          users needs.
+          This is the reason why I love getting to know my clients personally and being part of their projects or
+          business ideas
+          as I believe it is the key to identifying the essence of their business and reaching out to their ideal
+          audience.
+        </p> <br />
+        <p class="bio mb-1">
+          I'm happiest when I'm creating, learning, exploring and thinking about how to make things better. Currently, I
+          am
+          available to take on new freelance work, feel free to reach out and say hello even if you haven't got a
+          project in mind
+          yet!
+        </p><br />
+        <p class="bio mb-1">
+          I can help with creating beautiful functional websites, eye catching branding and graphics. Click below to
+          learn more.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 <div class="top-line-title"></div>
 <div class="title">
@@ -236,11 +287,12 @@ I design static and dynamic websites depending on requirements.<br/>
 </div>
 <div class="accordion-item">
   <div class="accordion-item-header">
-   <h4> Marketing & Print Design</h4>  
+   <h4> Digital Graphics & Print Design</h4>  
   </div>
   <div class="accordion-item-body">
     <div class="accordion-item-body-content">
-    I provide marketing support and can create catalogues, brochures/leaflets, flyers/posters to promote your business.
+    I provide graphic design support by creating logo, branding and colour palette to put together a brand identity that best represents you.
+    I provide the branding guidelines along with business cards design or letterheads if needed. I also create catalogues, brochures/leaflets, flyers/posters to promote your business.
     I can help you create graphics for prints or web use as well as infographics to suit your needs.
     
   <div class="tools">
@@ -302,33 +354,39 @@ I design static and dynamic websites depending on requirements.<br/>
 </div>
   <div class="accordion-item">
     <div class="accordion-item-header">
-      <h4> Visual Identity & Branding</h4>
+      <h4> Social Media and Electronic Direct Mail (EDM)</h4>
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-      I create logo, branding and colour palette to create a brand identity that best represents you.
-        I provide the branding guidelines along with business cards design or letterheads if needed.
+      I am confident using several social media platforms, creating content strategies and managing paid advertisement.
       <div class="tools">
         <h5> Skills & Tools</h5>
         <div class="row">
                   <div class="col-3 mb-3 p-0 center">
-            <img alt="Adobe Illustrator" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
-              src="/images/tools/illustrator.svg">
+            <img alt="Facebook" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+              src="/images/tools/Facebook-color.svg">
             <small class="technology">
-              Illustrator
+              Facebook
             </small>
           </div>
           <div class="col-3 mb-3 p-0 center">
-            <img alt="Canva" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/canva.png">
+            <img alt="Instagram" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/Instagram-color.svg">
             <small class="technology">
-              Canva
+              Instagram
             </small>
           </div>
           <div class="col-3 mb-3 p-0 center">
-            <img alt="Adobe Fresco" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
-              src="/images/tools/mnemonic-Fresco-32x32.svg">
+            <img alt="LinkedIn" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+              src="/images/tools/LinkedIn-color.svg">
             <small class="technology">
-              Fresco
+              LinkedIn
+            </small>
+          </div>
+          <div class="col-3 mb-3 p-0 center">
+            <img alt="MailChimp" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+              src="/images/tools/mailchimp.svg">
+            <small class="technology">
+              MailChimp
             </small>
           </div>
       </div>
