--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We create brand strategy - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
@@ -112,38 +112,67 @@
   <div class="title">
     <h1 class="title">Brand Strategy</h1>
   </div>
-  <div> <p>Are you starting up a new business? Or are you thinking about refreshing the look of your current business? I can help
+  <div class="container" > 
+    <div class="row"> 
+      <div class="col">
+<img src="./../images/brand strategy.jpg" alt="people brainstorming in front of whiteboard" class="service-image">
+      </div>
+      <div class="col">
+    <p class=" mb-1">Are you starting up a new business? Or are you thinking about refreshing the look of your current business? I can help
   you create a brand that represents you and communicates for you by creating the suite of brand marketing collateral that
   you need for promoting your business.</br>
   I can help you create the following elements:
   </p>
-  
-  <ul> 
-  <li> Logo creation</li>
-  <li> Brand guidelines</li>
-  <li>Business Cards</li>
-  <li>Letterheads</li>
-  <li>Signage</li>
-  <li>Advertisement design</li>
-  <li>Graphic design</li>
-  <li>Web design</li>
-  <li>Presentation decks and proposal design</li>
+    <p class=" mb-1">
+    <ul> 
+  <li>◼ Logo creation</li>
+  <li>◼ Brand guidelines</li>
+  <li>◼ Business Cards</li>
+  <li>◼ Letterheads</li>
+  <li>◼ Signage</li>
+  <li>◼ Advertisement design</li>
+  <li>◼ Graphic design</li>
+  <li>◼ Web design</li>
+  <li>◼ Presentation decks and proposal design</li>
 </ul>
+</p>
+</div>
+</div>
 </div>
   
-    <div class="container">
+    <div class="container creative-services">
       <div class="row">
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <div class="col">col</div>
-        <div class="col">col</div>
+        <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon"
+            class="service-icon" /></a></div>
+        <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+        <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+        <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+        <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
+        <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
       </div>
       </div>
 
 
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+<img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+<a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+Christchurch, New Zealand
+      </div>
+    </div>
 
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of Use</a>
+  </div>
 
 </footer>
 
