--- a/creative_services/logodesign.html
+++ b/creative_services/logodesign.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We design logos - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
@@ -111,34 +111,75 @@
 
 
   <div class="title">
-    <h1 class="title">Brand Strategy</h1>
+    <h1 class="title">Logo Design</h1>
   </div>
-  <div>
-    <p>Are you starting up a new business? Or are you thinking about refreshing the look of your current business? I can
-      help
-      you create a brand that represents you and communicates for you by creating the suite of brand marketing
-      collateral that
-      you need for promoting your business.</br>
-      I can help you create the following elements:
-    </p>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="./../images/Colour selection.jpg" alt="sample colour palettes for selection"
+          class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Your logo is a key part of your brand identity and is often the first thing your customers will see and remember. I can
+        help you design a memorable logo that does the talking for you to make you stand out from the pack. The logo design is
+        usually accompanied by a selection of brand assets that can be used alongside your logo depending on the context.
+       </br>
+          I can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ Logo creation</li>
+          <li>◼ Icon design</li>
+          <li>◼ Branding creation</li>
+          <li>◼ Rebranding</li>
+          <li>◼ Brand style guides</li>
+          <li>◼ Brand and logo assets</li>
+          <li>◼ Templates</li>
+          <li>◼ Marketing collateral</li>
+        </ul>
 
-    <ul>
-      <li> Logo creation</li>
-      <li> Brand guidelines</li>
-      <li>Business Cards</li>
-      <li>Letterheads</li>
-      <li>Signage</li>
-      <li>Advertisement design</li>
-      <li>Graphic design</li>
-      <li>Web design</li>
-      <li>Presentation decks and proposal design</li>
-    </ul>
+        </p>
+      </div>
+    </div>
   </div>
-  <div class="related-service" id="about"></div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+      <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+      <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+      <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+    </div>
+  </div>
+
 
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
 
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 </footer>
 
