--- a/creative_services/marketingcollateral.html
+++ b/creative_services/marketingcollateral.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We create marketing material and collateral - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
-  <link rel="icon" href="images/Icon small-min.png">
+  <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -58,7 +58,7 @@
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
       <li class="item"> <a href="./../about.html" title="About">About</a></li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Creative Services
@@ -73,7 +73,7 @@
           </li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Digital Marketing
@@ -87,7 +87,7 @@
           <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Web Development
@@ -109,13 +109,86 @@
     </ul>
   </nav>
 
-  <div class="top-line-title" id="about"></div>
+
   <div class="title">
-    <h1 class="title">Projects</h1>
+    <h1 class="title">Marketing material and collateral</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="./../images/Colour selection.jpg" alt="sample colour palettes for selection" class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Well-crafted marketing material can help you catch the attention of your potential customers. It is really important to
+        know who your audience is before creating advertising material. I can help with this and make sure that each piece is
+        targeting the right customers.
+        To help convince your customers to buy your product, I can help you build trust by creating with you the marketing
+        collateral that will set you as an authority in your industry.
+          </br>
+          I can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ Brochure design</li>
+          <li>◼ Product catalogue design</li>
+          <li>◼ Postcards and thank you cards</li>
+          <li>◼ Flyer design</li>
+          <li>◼ Poster design</li>
+          <li>◼ Infographic design</li>
+          <li>◼ Print and digital advertisement</li>
+          <li>◼ Social media advertisement</li>
+          <li>◼ Banner design</li>
+          <li>◼ Expo booth design</li>
+          <li>◼ Sign and flag design</li>
+          <li>◼ Apparel and uniform branding</li>
+          <li>◼ Newsletter and blog posts template</li>
+          <li>◼ Case studies template</li>
+          <li>◼ Testimonial and video explainer script and design</li>
+          <li>◼ Landing page design</li>
+        </ul>
+
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+      <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+      <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+      <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+    </div>
+  </div>
+
+
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
 
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 </footer>
 
