--- a/creative_services/templates.html
+++ b/creative_services/templates.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We design presentations, proposals and reports - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
-  <link rel="icon" href="images/Icon small-min.png">
+  <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -58,7 +58,7 @@
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
       <li class="item"> <a href="./../about.html" title="About">About</a></li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Creative Services
@@ -73,7 +73,7 @@
           </li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Digital Marketing
@@ -87,7 +87,7 @@
           <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Web Development
@@ -109,13 +109,75 @@
     </ul>
   </nav>
 
-  <div class="top-line-title" id="about"></div>
+
   <div class="title">
-    <h1 class="title">Projects</h1>
+    <h1 class="title">Presentation and proposal template</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="./../images/presentation.jpg" alt="presentation on laptop screen" class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Who doesn't like receiving compliment on their presentation deck? Help your stakeholder focus on the content of your
+        presentation by using a stylish and uncluttered presentation template that will help you engage with your audience and
+        communicate effectively.
+        I can create a template for you to use as a base for every presentation or help you design your next top notch deck by
+        structuring the message and design layout that will set you up for success.
+
+          </br>
+          I can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ PowerPoint presentation</li>
+          <li>◼ Google Slide presentation</li>
+          <li>◼ Webinar slide deck design</li>
+          <li>◼ Proposal template</li>
+      
+        </ul>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/creative_services/logodesign.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/logodesign.html">Logo creation</a></div>
+      <div class="col"><a href="/creative_services/marketingcollateral.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/creative_services/marketingcollateral.html">Marketing Collateral</a></div>
+      <div class="col"><a href="/creative_services/brandstrategy.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/brandstrategy.html">Brand strategy</a></div>
+      <div class="col"><a href="/creative_services/templates.html"><img src="./../images/Creativeicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/creative_services/templates.html">Presentation and Proposal</a></div>
+    </div>
+  </div>
+
+
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
 
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 </footer>
 
