--- a/digital_marketing/digitalstrategy.html
+++ b/digital_marketing/digitalstrategy.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We create bespoke digital marketing strategies- Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
-  <link rel="icon" href="images/Icon small-min.png">
+  <link rel="icon" href="./../images/Icon small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -58,7 +58,7 @@
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
       <li class="item"> <a href="./../about.html" title="About">About</a></li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Creative Services
@@ -73,7 +73,7 @@
           </li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Digital Marketing
@@ -87,7 +87,7 @@
           <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Web Development
@@ -109,13 +109,79 @@
     </ul>
   </nav>
 
-  <div class="top-line-title" id="about"></div>
+
   <div class="title">
-    <h1 class="title">Projects</h1>
+    <h1 class="title">Digital Marketing Strategy</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="./../images/marteking strategy.jpg" alt="Top view of desk with marketing strategy written on piece of paper" class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Considering most consumers have now more contacts with brands online via smartphones or computers than ever, it is
+        increasingly important to put together a digital strategy to interact with your audience effectively and turn them into
+        paying customers. A digital marketing strategy focuses on establishing the specific and achievable goals for marketing
+        through online channels. With the goals established, various tactics can then be put in place to achieve our marketing
+        objectives.
+          </br>
+          I can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ Digital marketing strategy</li>
+          <li>◼ Digital marketing assessment</li>
+          <li>◼ Buyer persona creation</li>
+          <li>◼ Search Engine Optimisation (SEO)</li>
+          <li>◼ Social Media Marketing (SMM)</li>
+          <li>◼ Digital advertising</li>
+          <li>◼ Content Marketing</li>
+          <li>◼ Website marketing and landing pages</li>
+          <li>◼ Email Marketing</li>
+          <li>◼ Downloadable content</li>
+        </ul>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/digital_marketing/digitalstrategy.html"><img src="./../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
+      <div class="col"><a href="/digital_marketing/smmanagement.html"><img src="./../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a></div>
+      <div class="col"><a href="/digital_marketing/emailmarketing.html"><img src="./../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
+      <div class="col"><a href="/digital_marketing/websitemarketing.html"><img src="./../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
+    </div>
+  </div>
+
+
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="./../images/Icon small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
 
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 </footer>
 
