--- a/digital_marketing/smmanagement.html
+++ b/digital_marketing/smmanagement.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+  <title>We put together social media marketing strategies - Creafix Design </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
-  <link rel="icon" href="images/Icon small-min.png">
+  <link rel="icon" href="../images/Icon%20small-min.png">
   <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -56,66 +56,133 @@
     <ul class="menu" id="navbar">
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
-      <li class="item"> <a href="./../about.html" title="About">About</a></li>
-      <li class="nav-item dropdown">
+      <li class="item"> <a href="../index.html" title="Homepage">Home</a></li>
+      <li class="item"> <a href="../about.html" title="About">About</a></li>
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Creative Services
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+          <li><a class="dropdown-item" href="../creative_services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="../creative_services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="../creative_services/marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal
+          <li><a class="dropdown-item" href="../creative_services/templates.html">Presentation and proposal
               template</a>
           </li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Digital Marketing
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
           </li>
-          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+          <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
         </ul>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          <li><a class="dropdown-item" href="../web_development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="../web_development/landingpages.html">Landing Pages</a>
           </li>
-          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+          <li><a class="dropdown-item" href="../web_development/websiteaudit.html">Website Audit</a></li>
         </ul>
       </li>
-      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="../mywork.html" title="My Work">Work</a></li>
 
-      <li class="item"> <a href="./../index.html#contact" title="Contact me">Contact</a></li>
+      <li class="item"> <a href="../index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
 
 
     </ul>
   </nav>
 
-  <div class="top-line-title" id="about"></div>
   <div class="title">
-    <h1 class="title">Projects</h1>
+    <h1 class="title">Social Media Marketing (SMM)</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="../images/Audience.png"
+          alt="Word audience written on whiteboard" class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Wanting to increase traffic to your website or reach more customers? Social Media marketing can be an option for your
+        business. After understanding your marketing objectives, I can help you select the most relevant social media
+        platform(s) for your target audience and put a plan in place to make use of your social media potential.
+        Not sure if social media is the tool for you? Here is the top 3 benefits:
+        - Increase your brand awareness
+        - Generate leads and boost conversion
+        - Nurture relationship with customers
+
+          </br>
+          I can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ Social media strategy</li>
+          <li>◼ Social media platform selection</li>
+          <li>◼ Facebook</li>
+          <li>◼ Instagram</li>
+          <li>◼ LinkedIn</li>
+          <li>◼ Pinterest</li>
+          <li>◼ Monitor social media metrics (reach, engagement, etc.)</li>
+        </ul>
+
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/digital_marketing/digitalstrategy.html"><img src="../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
+      <div class="col"><a href="/digital_marketing/smmanagement.html"><img src="../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/digital_marketing/smmanagement.html">Social Media Management</a></div>
+      <div class="col"><a href="/digital_marketing/emailmarketing.html"><img src="../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/digital_marketing/emailmarketing.html">Email Marketing</a></div>
+      <div class="col"><a href="/digital_marketing/websitemarketing.html"><img src="../images/DMicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/digital_marketing/websitemarketing.html">Website Marketing</a></div>
+    </div>
+  </div>
+
+
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
 
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 </footer>
 
