updated index page

--- a/creative_services/logodesign.html
+++ b/creative_services/logodesign.html
@@ -57,7 +57,7 @@
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
-      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+  
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
@@ -68,8 +68,7 @@
           <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
           <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
               collateral</a></li>
-          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal
-              template</a>
+          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
           </li>
         </ul>
       </li>
@@ -101,14 +100,13 @@
         </ul>
       </li>
       <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-
-      <li class="item"> <a href="./../index.html#contact" title="Contact me">Contact</a></li>
+      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="./../contact.html" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
-
-
+  
+  
     </ul>
   </nav>
-
 
   <div class="title">
     <h1 class="title">Logo Design</h1>
