--- a/mywork.html
+++ b/mywork.html
@@ -52,59 +52,61 @@
 </head>
 
 <body>
-  <nav>
-    <ul class="menu" id="navbar">
-      <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
-            alt="creafix design logo" width="150" /></a></li>
-      <li class="item"> <a href="index.html" title="Homepage">Home</a></li>
-      <li class="item"> <a href="about.html" title="About">About</a></li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Creative Services
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="creative_services/brandstrategy.html">Branding Strategy</a></li>
-          <li><a class="dropdown-item" href="creative_services/logodesign.html">Logo Design</a></li>
-          <li><a class="dropdown-item" href="creative_services/marketingcollateral.html">Marketing material and
-              collateral</a></li>
-          <li><a class="dropdown-item" href="creative_services/templates.html">Presentation and proposal template</a></li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Digital Marketing
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></li>
-          <li><a class="dropdown-item" href="digital_marketing/smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="digital_marketing/websitemarketing.html">Website Marketing</a>
-          </li>
-          <li><a class="dropdown-item" href="digital_marketing/emailmarketing.html">Email Marketing</a></li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-          aria-expanded="false">
-          Web Development
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="web_development/webdesign.html">Web Design</a></li>
-          <li><a class="dropdown-item" href="web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-          <li><a class="dropdown-item" href="web_development/landingpages.html">Landing Pages</a>
-          </li>
-          <li><a class="dropdown-item" href="web_development/websiteaudit.html">Website Audit</a></li>
-        </ul>
-      </li>
-      <li class="item"> <a href="mywork.html" title="My Work">Work</a></li>
-  
-      <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
-      <li class="toggle"> <span class="bars"></span></li>
-  
-  
-    </ul>
-  </nav>
+<nav>
+  <ul class="menu" id="navbar">
+    <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
+          alt="creafix design logo" width="150" /></a></li>
+    <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Creative Services
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
+        <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
+        <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+            collateral</a></li>
+        <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
+        </li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Digital Marketing
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+        </li>
+        <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+        </li>
+        <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown item">
+      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Web Development
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
+        <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+        </li>
+        <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+      </ul>
+    </li>
+    <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
+    <li class="item"> <a href="./../about.html" title="About">About</a></li>
+    <li class="item"> <a href="./../contact.html" title="Contact me">Contact</a></li>
+    <li class="toggle"> <span class="bars"></span></li>
+
+
+  </ul>
+</nav>
 
 <div class="top-line-title" id="about"></div>
 <div class="title">
