--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -57,7 +57,7 @@
       <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
             alt="creafix design logo" width="150" /></a></li>
       <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
-      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+     
       <li class="nav-item dropdown item">
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
@@ -100,8 +100,8 @@
         </ul>
       </li>
       <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-
-      <li class="item"> <a href="./../index.html#contact" title="Contact me">Contact</a></li>
+<li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="./../contact.html" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
 
 
