--- a/creative_services/brandstrategy.html
+++ b/creative_services/brandstrategy.html
@@ -101,7 +101,7 @@
       </li>
       <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
 <li class="item"> <a href="./../about.html" title="About">About</a></li>
-      <li class="item"> <a href="./../contact.html" title="Contact me">Contact</a></li>
+      <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
 
 
