--- a/creative_services/marketingcollateral.html
+++ b/creative_services/marketingcollateral.html
@@ -101,7 +101,7 @@
       </li>
       <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
       <li class="item"> <a href="./../about.html" title="About">About</a></li>
-      <li class="item"> <a href="./../contact.html" title="Contact me">Contact</a></li>
+      <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
       <li class="toggle"> <span class="bars"></span></li>
   
   
@@ -115,7 +115,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <img src="./../images/Colour selection.jpg" alt="sample colour palettes for selection" class="service-image">
+        <img src="./../images/Mockup flyer.png" alt="sample colour palettes for selection" class="service-image">
       </div>
       <div class="col">
         <p class=" mb-1">Well-crafted marketing material can help you catch the attention of your potential customers. It is really important to
