--- a/web_development/seo.html
+++ b/web_development/seo.html
@@ -52,68 +52,144 @@
 </head>
 
 <body>
-<nav>
-  <ul class="menu" id="navbar">
-    <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
-          alt="creafix design logo" width="150" /></a></li>
-    <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+  <nav>
+    <ul class="menu" id="navbar">
+      <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
+            alt="creafix design logo" width="150" /></a></li>
+      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
 
-    <li class="nav-item dropdown item">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Creative Services
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
-            collateral</a></li>
-        <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal template</a>
-        </li>
-      </ul>
-    </li>
-    <li class="nav-item dropdown item">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Digital Marketing
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
-        </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
-        </li>
-        <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
-      </ul>
-    </li>
-    <li class="nav-item dropdown item">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Web Development
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
-        </li>
-        <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
-      </ul>
-    </li>
-    <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
-    <li class="item"> <a href="./../about.html" title="About">About</a></li>
-    <li class="item"> <a href="./../contact.html" title="Contact me">Contact</a></li>
-    <li class="toggle"> <span class="bars"></span></li>
+      <li class="nav-item dropdown item">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Creative Services
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+              collateral</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal
+              template</a>
+          </li>
+        </ul>
+      </li>
+      <li class="nav-item dropdown item">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Digital Marketing
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          </li>
+          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          </li>
+          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+        </ul>
+      </li>
+      <li class="nav-item dropdown item">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Web Development
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          </li>
+          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+        </ul>
+      </li>
+      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
+      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
+      <li class="toggle"> <span class="bars"></span></li>
 
 
-  </ul>
-</nav>
+    </ul>
+  </nav>
 
-  <div class="top-line-title" id="about"></div>
   <div class="title">
-    <h1 class="title">Projects</h1>
+    <h1 class="title">Search Engine Optimisation (SEO)</h1>
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="../images/" alt="Word audience written on whiteboard" class="service-image">
+      </div>
+      <div class="col">
+        <p class=" mb-1">Not all business websites require the use of complex features or design. We carry out an audit
+          of where you are
+          currently and where you're wanted to be in the short to long term to make a recommendation on the most
+          suitable option
+          for your situation. We offer services ranging for fully custom coded websites to CMS build websites on Wix,
+          SquareSpace
+          or Shopify for example. We take you through the entire process from creating the layout via wireframes to
+          registering
+          your domain, hosting and publishing your website for the world to see. All webpages are optimised for best SEO
+          ranking
+          making it easier for your customers to find you.
+
+          </br>
+          We can help you with:
+        </p>
+        <p class=" mb-1">
+        <ul>
+          <li>◼ Custom code</li>
+          <li>◼ WordPress</li>
+          <li>◼ Wix</li>
+          <li>◼ Squarespace</li>
+          <li>◼ Shopify</li>
+          <li>◼ UI/UX design</li>
+          <li>◼ Website architecture</li>
+          <li>◼ Sitemaps</li>
+          <li>◼ Domain name registration</li>
+          <li>◼ Webhosting</li>
+          <li>◼ Web page maintenance and updates</li>
+        </ul>
+
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container creative-services">
+    <div class="row">
+      <div class="col"><a href="/web_development/webdesign.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/webdesign.html">Web design & development</a></div>
+      <div class="col"><a href="/web_development/seo.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"> <a href="/web_development/seo.html">Search Engine Optimisation (SEO)</a></div>
+      <div class="col"><a href="/web_development/landingpages.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/landingpages.html">Landing pages</a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html"><img src="../images/WebDevicon.png"
+            alt="Creative services pencil icon" class="service-icon" /></a></div>
+      <div class="col"><a href="/web_development/websiteaudit.html">Website performance assessment</a></div>
+    </div>
+  </div>
+
+
 </body>
 <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-1">
+        <img src="../images/Icon%20small-min.png" alt="Creafix Design icon" class="">
+      </div>
+      <div class="col-11 email-footer">
+        <a href="mailto:hello@creafixdesign.com" class="email-link" title="Email me">Email me</a>
+        Christchurch, New Zealand
+      </div>
+    </div>
+
+
+  </div>
+  <div id="terms">
+    © 2022 by Creafix Design All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Website Terms of
+      Use</a>
+  </div>
 
 
 </footer>
